@@ -1,3 +1,7 @@
+2017-01-28  vaiorabbit  <http://twitter.com/vaiorabbit>
+
+	* Updated using latest gl.xml.
+
 2016-12-25  vaiorabbit  <http://twitter.com/vaiorabbit>
 
 	* Tested on ruby 2.4.0p0.
